--- a/AutoSchedule/Views/Organization/OrgAdd.cshtml
+++ b/AutoSchedule/Views/Organization/OrgAdd.cshtml
@@ -11,83 +11,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="~/css/layui.css" rel="stylesheet" />
-
+    <script src="~/layui.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
 <body>
 
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>数据源增加表单</legend>
+        <legend>组织机构增加表单</legend>
     </fieldset>
 
     <form class="layui-form">
+
         <div class="layui-form-item">
-            <label class="layui-form-label">单据类型</label>
+            <label class="layui-form-label">机构编号</label>
             <div class="layui-input-block">
-                <select name="FType" lay-filter="fType">
-                    <option value="0" selected="">业务单据</option>
+                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">机构名称</label>
+            <div class="layui-input-block">
+                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">数据库类型</label>
+            <div class="layui-input-block">
+                <select name="FType" lay-filter="aihao">
+                    <option value="0" selected="">Oracle</option>
+                    <option value="1" selected="">SqlServer</option>
                 </select>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">单据名称</label>
+            <label class="layui-form-label">服务器名称</label>
             <div class="layui-input-block">
-                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="请输入单据名称" class="layui-input">
-            </div>
-        </div>
-
-        <div class="layui-form-item" pane="">
-            <label class="layui-form-label">是否启用</label>
-            <div class="layui-input-block">
-                <input type="checkbox" checked="" lay-verify="required" name="IsStart" lay-skin="switch" lay-filter="switchTest" title="是否启用">
+                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="请输入服务器名称，比如:192.168.5.7,3307" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">主关键字段</label>
+            <label class="layui-form-label">数据库名称</label>
             <div class="layui-input-block">
-                <input type="text" name="MainKey" lay-verify="required" autocomplete="off" placeholder="请输入单据名称" class="layui-input">
+                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="请输入数据库名称" class="layui-input">
             </div>
         </div>
 
-        <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">分组数据源</label>
+        <div class="layui-form-item">
+            <label class="layui-form-label">用户名</label>
             <div class="layui-input-block">
-                <textarea placeholder="请输入内容" lay-verify="required" class="layui-textarea" name="GroupSqlString"></textarea>
+                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
             </div>
         </div>
-        <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">业务选择数据源</label>
+        <div class="layui-form-item">
+            <label class="layui-form-label">密码</label>
             <div class="layui-input-block">
-                <textarea placeholder="请输入内容" lay-verify="required" class="layui-textarea" name="SqlString"></textarea>
+                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
             </div>
         </div>
-        <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">调用正常后执行语句</label>
-            <div class="layui-input-block">
-                <textarea placeholder="请输入内容" lay-verify="required" class="layui-textarea" name="AfterSqlString"></textarea>
-            </div>
-        </div>
-        <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">调用异常后执行语句</label>
-            <div class="layui-input-block">
-                <textarea placeholder="请输入内容" lay-verify="required" class="layui-textarea" name="AfterSqlstring2"></textarea>
-            </div>
-        </div>
-        @*<div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">编辑器</label>
-                <div class="layui-input-block">
-                    <textarea class="layui-textarea layui-hide" name="content" lay-verify="content" id="LAY_demo_editor"></textarea>
-                </div>
-            </div>*@
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button type="button" class="layui-btn" lay-submit="" lay-filter="ensure">立即提交</button>
+                <button type="button" class="layui-btn" lay-filter="testConnect">测试连接</button>
+                <button type="button" class="layui-btn" lay-filter="enSure">确定</button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
     </form>
-    <script src="~/layui.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+
     <script type="text/javascript">
         layui.use(['form', 'layedit', 'laydate'], function () {
             var form = layui.form
@@ -108,7 +99,7 @@
 
             //console.log(layui.table.cache.tablename);
 
-            form.on('submit(ensure)', function (data) {
+            form.on('submit(enSure)', function (data) {
                 var dataDetail = JSON.stringify(data.field);
                 console.log(dataDetail);
                 $.ajax({
