--- a/AutoSchedule/Views/Organization/OrgAdd.cshtml
+++ b/AutoSchedule/Views/Organization/OrgAdd.cshtml
@@ -26,54 +26,55 @@
         <div class="layui-form-item">
             <label class="layui-form-label">机构编号</label>
             <div class="layui-input-block">
-                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+                <input type="text" name="CODE" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">机构名称</label>
             <div class="layui-input-block">
-                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+                <input type="text" name="NAME" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">数据库类型</label>
             <div class="layui-input-block">
-                <select name="FType" lay-filter="aihao">
+                <select name="DBType" lay-filter="aihao">
                     <option value="0" selected="">Oracle</option>
                     <option value="1" selected="">SqlServer</option>
+                    <option value="2" selected="">MySql</option>
                 </select>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">服务器名称</label>
             <div class="layui-input-block">
-                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="请输入服务器名称，比如:192.168.5.7,3307" class="layui-input">
+                <input type="text" name="ServerName" lay-verify="required" autocomplete="off" placeholder="请输入服务器名称，比如:192.168.5.7,3307" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">数据库名称</label>
             <div class="layui-input-block">
-                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="请输入数据库名称" class="layui-input">
+                <input type="text" name="DataBaseName" lay-verify="required" autocomplete="off" placeholder="请输入数据库名称" class="layui-input">
             </div>
         </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label">用户名</label>
             <div class="layui-input-block">
-                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+                <input type="text" name="UserName" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">密码</label>
             <div class="layui-input-block">
-                <input type="text" name="Name" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+                <input type="password" name="Password" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button type="button" class="layui-btn" lay-filter="testConnect">测试连接</button>
-                <button type="button" class="layui-btn" lay-filter="enSure">确定</button>
+                <button type="button" class="layui-btn" lay-filter="testConnect" lay-submit="">测试连接</button>
+                <button type="button" class="layui-btn" lay-filter="enSure" lay-submit="">确定</button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
@@ -82,28 +83,12 @@
     <script type="text/javascript">
         layui.use(['form', 'layedit', 'laydate'], function () {
             var form = layui.form
-                , layer = layui.layer
-                , layedit = layui.layedit
-                , laydate = layui.laydate;
-
-            //创建一个编辑器
-            //var editIndex = layedit.build('LAY_demo_editor');
-
-            ////监听指定开关
-            form.on('switch(switchTest)', function (data) {
-                layer.msg('启用状态：' + (this.checked ? '是' : '否'), {
-                    offset: '6px'
-                });
-            });
-
-
-            //console.log(layui.table.cache.tablename);
-
+                , layer = layui.layer;
             form.on('submit(enSure)', function (data) {
                 var dataDetail = JSON.stringify(data.field);
                 console.log(dataDetail);
                 $.ajax({
-                    url: "/DataSource/DataSourceDetail",
+                    url: "/Organization/OrgAdd",
                     async: true,
                     type: "POST",
                     dataType: "json",
@@ -118,10 +103,26 @@
                         setTimeout(function () { parent.location.reload() }, 100); 
                     }
                 });
-                //window.parent.location.reload();
                
             });
 
+            //测试是否能够连接
+            form.on('submit(testConnect)', function (data) {
+                var dataDetail = JSON.stringify(data.field);
+                console.log(dataDetail);
+                $.ajax({
+                    url: "/Organization/OrgTestConnect",
+                    async: false,
+                    type: "POST",
+                    dataType: "json",
+                    contentType: "application/json;charset=UTF-8",
+                    data: dataDetail,
+                    success: function (dataResult) {
+                            alert(dataResult.msg);
+                    }
+                });
+               
+            });
         });
     </script>
 
