--- a/AutoSchedule/Views/Organization/OrgEdit.cshtml
+++ b/AutoSchedule/Views/Organization/OrgEdit.cshtml
@@ -17,11 +17,11 @@
 <body>
 
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>数据源修改表单</legend>
+        <legend>组织机构修改表单</legend>
     </fieldset>
 
     <form class="layui-form">
-        <div class="layui-form-item"  hidden="hidden">
+        <div class="layui-form-item" hidden="hidden">
             <label class="layui-form-label">机构编号</label>
             <div class="layui-input-block">
                 <input type="text" name="CODE" lay-verify="required" autocomplete="off" placeholder="" class="layui-input" value="@Model.CODE">
@@ -84,7 +84,7 @@
         $(function () {
             $("#select").val("@Model.DBType");
         });
-       
+
         layui.use(['form', 'layedit', 'laydate'], function () {
             var form = layui.form
                 , layer = layui.layer;
@@ -104,7 +104,7 @@
                             alert(dataResult.msg);
                     }
                 });
-               
+
             });
 
 
